...
                              // Number is empty, show option to simulate incoming call
                              GestureDetector(
                                onTap: () {
                                  context.read<DialerBloc>().add(
                                    ReceiveIncomingCall(
                                      phoneNumber: '01-45728',
                                      callerName: 'John Doe',
                                      simNumber: '01-626262',
                                    ),
                                  );
                                },
                                child: Container(
                                  padding: const EdgeInsets.symmetric(
...
                                        Icons.call_received,
                                        size: 14,
                                        color: Colors.green,
                                      ),
                                      SizedBox(width: 6),
                                      Text(
                                        "Simulate Incoming Call",
                                        style: TextStyle(
                                          color: AppColors.onSurfaceVariant,
                                          fontSize: 12,
                                        ),
                                      ),
                                    ],
...
